--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -7,9 +7,9 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=123456"
-    //"Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
-    //"Host=database.purintech.id.vn;Port=5432;Database=MovieTheater;Username=postgres;Password=<Hu@nH0aH0n9>;"
+    // "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=123456"
+    // "Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
+    "Host=database.purintech.id.vn;Port=5432;Database=MovieTheater;Username=postgres;Password=<Hu@nH0aH0n9>;"
   },
   "JwtSettings": {
     "SecretKey": "GvlKp62o31vaP3WzWsQDO3hOQpZdbhtt",
