--- a/WebAPI/WebAPI/WebAPI.csproj
+++ b/WebAPI/WebAPI/WebAPI.csproj
@@ -9,6 +9,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+	<PackageReference Include="coverlet.collector" Version="6.0.4">
+	  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+	  <PrivateAssets>all</PrivateAssets>
+	</PackageReference>
 	<PackageReference Include="FirebaseAdmin" Version="3.2.0" />
 	<PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.3.0" />
 	<PackageReference Include="Microsoft.AspNetCore.SignalR" Version="1.2.0" />
