--- a/WebAPI/WebAPI/appsettings.json
+++ b/WebAPI/WebAPI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-     "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=123456"
+     "Local": "Host=localhost;Port=5432;Database=MovieTheater;Username=postgres;Password=1234567890"
     // "Server=(local);uid=sa;pwd=12345;Database=PrenatalCareDB;TrustServerCertificate=true;Encrypt=true;"
     //"Local": "Host=database.purintech.id.vn;Port=5432;Database=MovieTheater;Username=postgres;Password=<Hu@nH0aH0n9>;"
   },
@@ -26,8 +26,8 @@
     "Command": "pay",
     "CurrCode": "VND",
     "Locale": "vn",
-    "PaymentBackReturnUrl": "http://localhost:5173/payment/callback/order",
-    "PaymentBackReturnUrll": "http://localhost:5173/payment/callback/subscription"
+    "PaymentBackReturnUrl": "http://localhost:5173/payment/vnpay-return/order",
+    "PaymentBackReturnUrll": "http://localhost:5173/payment/vnpay-return/subscription"
   },
 
   "EmailSettings": {
